--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,7 @@
 ---
-title: "personal_site"
+title: "Neel Smith"
 ---
 
-This is a Quarto website.
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+This is a personal web site where I'm planning to make some of my current work available.
+ 
