Add personal section

--- a/about.qmd
+++ b/about.qmd
@@ -2,4 +2,13 @@
 title: "About"
 ---
 
-This is a personal web site where I'm planning to make some of my current work available.
+
+All the work on this site has grown out of stimulating collaborations.
+
+
+Main projects:
+
+- the Perseus project
+- the Turkish-American excavations at Hacımusalar
+- the Homer Multitext project
+- the Holy Cross Manuscripts, Inscriptions and Documents Club
