--- a/about.qmd
+++ b/about.qmd
@@ -12,3 +12,7 @@ Main projects:
 - the Turkish-American excavations at Hacımusalar
 - the Homer Multitext project
 - the Holy Cross Manuscripts, Inscriptions and Documents Club
+
+> A dedication
+>
+> (TBA)
