--- a/julia.qmd
+++ b/julia.qmd
@@ -2,12 +2,16 @@
 title: "Why Julia?"
 ---
 
-I started using Julia in 2021 because of Pluto notebooks.
+All the code presented on this site is written in [Julia](https://julialang.org). 
 
-A few reasons it's become my language of choice:
+I started using Julia when I was desperately looking for better ways to teach remotely during the pandemic. I discovered the famous MIT course "[Introduction to Computational Thinking](https://ocw.mit.edu/courses/18-s191-introduction-to-computational-thinking-fall-2020/)", and was immediately taken with teaching using [Pluto notebooks](https://plutojl.org), written in Julia.
+
+By January of 2021, Julia had become my language of choice. A few reasons:
+
 
 - I don't spend time trying to manage versions and environments
-- It runs everywhere
+- Julia runs everywhere
 - It's fast
-- Twenty-first century features are part of the language, not add-ons: mature handling of Unicode, built-in support for unit testing, many other features
-- Productive working environment (Pluto, VS Code including options like Quarto)
+- Twenty-first century features are part of the language, not add-ons: Julia has mature handling of Unicode, built-in support for unit testing, and many other features
+- Great tooling makes for a productive working environment (Julia REPL, VS Code including options like Quarto plugin, Pluto notebooks)
+- Pluto notebooks are awesome
