--- a/digschol/index.qmd
+++ b/digschol/index.qmd
@@ -5,18 +5,23 @@ title: "Digital scholarship"
 A selection of some work I'm currently developing or maintaining.
 
 
+
 ## Concepts and code
 
+:::{.callout-note}
 The fuller information for each of the links in this section includes narrative presentation of concepts. These could be read sequentially like a book, but I've chosen to present them together with documentation and tutorials using implementations of the concepts.
 
 All the code in the linked sections is in Julia.
+:::
+
+
 
 :::: {.columns}
 
 ::: {.column width="25%"}
-### Citation
+### [Citation](../cite/)
 
-Citation with URNs
+
 
 Citing texts
 
@@ -31,8 +36,7 @@ Citing images
 :::
 
 ::: {.column width="25%"}
-### Digital texts
-
+### [Digital texts](../digitexts/)
 
 [Orthography](../digitexts/orthography/)
 
@@ -49,8 +53,7 @@ Citing images
 :::
 
 ::: {.column width="25%"}
-### The Homer Multitext project
-
+### [The Homer Multitext project](../hmt/)
 
 The HMT archive
 
