--- a/digitexts/orthography/index.qmd
+++ b/digitexts/orthography/index.qmd
@@ -4,8 +4,21 @@ title: Orthography
 
 
 
-We can't read a text until we understand how it is written!
+We can't read a text until we understand how its writing system; we can't meaningfully work with a digital text until we understand how its writing system is encoded digitally.
+
+Problems:
+
+- conflation of language and writing system!
+- naive generalizations from a single language (especially English)
+- hacks to work around problems that should follow automatically from a well defined digital orthographic system
+
+Concepts introduced and a functional interface in Julia defined in the `Orthography.jl` package.
 
 
-Read more about orthography: [https://neelsmith.quarto.pub/orthography/](https://neelsmith.quarto.pub/orthography/)
+:::{.callout-note}
 
+## Orthography: concepts and Julia package
+
+See a fuller presentation of `Orthography.jl` (concepts and code) [here](https://neelsmith.quarto.pub/orthography/).
+
+:::
