Expand digital texts section

--- a/digitexts/index.qmd
+++ b/digitexts/index.qmd
@@ -6,5 +6,7 @@ Overview: what's different about computational study of texts in historical lang
 
 - builds on central ideas of [citation](../cite/)
 - languages known to us only through written sources: essential to be explicit about the relation of [orthography](./orthography/) to language
+- we often need to construct unambiguous editions from source material in a variety of [structured text formats](./editions/)
 - the Indo-European and Semitic languages I work in are [morphologically rich](./parsing/): we need to take advantage of thats
+
 
