--- a/digschol/index.qmd
+++ b/digschol/index.qmd
@@ -8,13 +8,17 @@ A selection of some work I'm currently developing or maintaining.
 
 ## Concepts and code
 
-:::{.callout-note}
-The fuller information for each of the links in this section includes narrative presentation of concepts. These could be read sequentially like a book, but I've chosen to present them together with documentation and tutorials using implementations of the concepts.
 
-All the code in the linked sections is in Julia.
+:::{.callout-note}
+Under each heading, links lead to futher information including narrative presentation of concepts. While these could be read sequentially like a book, I've chosen to present them together with documentation and tutorials using implementations of the concepts.
+
+All code in the linked sections is in [Julia](../julia.qmd).
 :::
 
 
+Scholarship in the humanities depends on *citation* to identify its unique objects of study. This section presents work on technology-independent citation using URNs.
+
+All analysis of digital texts must take account of *orthography* in order to perform the basic tasks like tokenization. This section 
 
 :::: {.columns}
 
@@ -39,6 +43,9 @@ All the code in the linked sections is in Julia.
 ### [Digital texts](../digitexts/)
 
 [Orthography](../digitexts/orthography/)
+
+[Citable editions](../digitexts/editions/)
+
 
 [Morphological parsing](../digitexts/parsing/)
 
