Better organization of notes

--- a/digitexts/parsing/index.qmd
+++ b/digitexts/parsing/index.qmd
@@ -10,3 +10,10 @@ And see some implementations:
 - [Tabulae](./tabulae.qmd)
 - Luhot
 - Trmilli
+
+
+Quarrying lexica for vocabulary:
+
+- LSJMining.jl
+- LexiconMining.jl
+
