--- a/digitexts/orthography/latin.qmd
+++ b/digitexts/orthography/latin.qmd
@@ -3,4 +3,11 @@ title: "Latin orthography"
 ---
 
 
+:::{.callout-caution}
+## Content incomplete
+
+This page will introduce implementations of the `OrthographicSystem` interface for Latin.
+:::
+
+
 - LatinOrthography.jl
