--- a/digitexts/orthography/hebrew.qmd
+++ b/digitexts/orthography/hebrew.qmd
@@ -3,4 +3,13 @@ title: "Hebrew orthography"
 ---
 
 
+
+:::{.callout-caution}
+
+## Content incomplete
+
+This page will introduce a package implementing the `OrthographicSystem` interface for Biblical Hebrew.
+:::
+
+
 - BiblicalHebrew.jl
