--- a/digitexts/orthography/lycian.qmd
+++ b/digitexts/orthography/lycian.qmd
@@ -3,4 +3,12 @@ title: "Lycian orthography"
 ---
 
 
+
+:::{.callout-caution}
+## Content incomplete
+
+This page will introduce implementations of the `OrthographicSystem` interface for Lycian.
+:::
+
+
 - Lycian.jl
