Wokr on site design

--- a/cite/urns/cite2.qmd
+++ b/cite/urns/cite2.qmd
@@ -2,4 +2,11 @@
 title: "Citable objects"
 ---
 
-CITE2 URNs
+
+:::{.callout-caution}
+## Content incomplete
+
+This page will introduce citation of objects in collections.
+:::
+
+See the documentation of the [`CitableObject`](https://cite-architecture.github.io/CitableObject.jl/stable/) package.
