--- a/cite/urns/cts.qmd
+++ b/cite/urns/cts.qmd
@@ -2,4 +2,11 @@
 title: "Citable texts"
 ---
 
-CTS URNs
+
+:::{.callout-caution}
+## Content incomplete
+
+This page will introduce citation of passages of texts.
+:::
+
+See the documentation of the [`CitableText`](https://cite-architecture.github.io/CitableText.jl/stable/) package.
