--- a/cite/urns/imgs.qmd
+++ b/cite/urns/imgs.qmd
@@ -2,4 +2,11 @@
 title: "Citable images"
 ---
 
-CITE2 URNs, including RoI extensions
+
+:::{.callout-caution}
+## Content incomplete
+
+This page will introduce citation of images including specific regions of interest..
+:::
+
+See the documentation of the [`CitableImage`](https://cite-architecture.github.io/CitableImage.jl/stable/) package.
