--- a/cite/urns/index.qmd
+++ b/cite/urns/index.qmd
@@ -4,3 +4,12 @@ title: "Citation with URNs"
 
 
 Why it's right
+
+
+:::{.callout-caution}
+## Content incomplete
+
+This page will introduce scholarly citation using URNs.
+:::
+
+See the documentation of the [`CitableBase`](https://cite-architecture.github.io/CitableBase.jl/stable/) package.
