--- a/biblio.bib
+++ b/biblio.bib
@@ -10,3 +10,11 @@
 	address = {New York},
 	langid = {English}
 }
+
+@article{allen2015,
+	title = {Punctuating Happiness},
+	author = {Allen, Danielle},
+	year = {2015},
+	date = {2015},
+	url = {https://www.ias.edu/sites/default/files/sss/pdfs/Allen/punctuating-happiness-2_12_15.pdf}
+}
